K3S/infrastructure/traefik/Manifest/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-ingressroute
  namespace: kube-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.k3s.wiserisk.be`) || Host(`traefik.k3s.wiserisk.home`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
